# sca

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  benchmark.txt  benchmarks.txt  enric.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
examples/: README.md  advanced_usage.py  basic_usage.py
semantic_code_analyzer/: __init__.py  cli.py  code_embedder.py  commit_extractor.py  progress.py  semantic_scorer.py  similarity_calculator.py
semantic_code_analyzer/analyzers/: __init__.py  architectural_analyzer.py  base_analyzer.py  domain_adherence_analyzer.py  domain_classifier.py  framework_analyzer.py  quality_analyzer.py  typescript_analyzer.py
semantic_code_analyzer/embeddings/: __init__.py  code_feature_extractor.py  pattern_indexer.py
semantic_code_analyzer/hardware/: __init__.py  device_manager.py  exceptions.py
semantic_code_analyzer/parsing/: __init__.py  data_compressor.py  function_extractor.py  language_registry.py
semantic_code_analyzer/parsing/queries/: go.scm  java.scm  javascript.scm  python.scm  rust.scm  typescript.scm
semantic_code_analyzer/scorers/: __init__.py  multi_dimensional_scorer.py  weighted_aggregator.py
semantic_code_analyzer/training/: __init__.py  contrastive_trainer.py  data_preparation.py  pair_generation.py
tests/: __init__.py  conftest.py  test_cli.py  test_code_embedder.py  test_code_feature_extractor.py  test_commit_extractor.py  test_data_compressor.py  test_device_manager.py  test_domain_adherence_analyzer.py  test_domain_aware_integration.py  test_domain_classifier.py  test_hardware_acceleration.py  test_integration.py  test_multi_dimensional_analysis.py  test_pattern_indexer.py  test_progress_reporting.py  test_semantic_scorer.py  test_similarity_calculator.py
